# backend

./: .env-dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pre-start.sh  pyproject.toml
.github/workflows/: main.yaml
app/: crud.py  database.py  main.py  models.py  schemas.py  types.py
app/api/: error_http.py  responses.py  router.py
app/api/endpoints/: exercise.py  parameter.py  session.py  users.py
app/core/: config.py  exceptions.py
app/crud/: __init__.py  base.py  crud_exercise.py  crud_session.py  crud_user.py  crud_workout.py
app/db/: __init__.py  database.py  types.py
app/models/: __init__.py  exercise.py  session.py  user.py  workout.py
app/schemas/: __init__.py  exercise.py  exercise_set.py  parameter.py  parameter_value.py  session.py  set.py  user.py  workout.py
app/services/: workout.py
migrations/: env.py
migrations/versions/: cb9c6bd0c153_add_workout_and_user.py
scripts/: start_local.sh
tests/: conftest.py  utils.py
tests/schemas/: Exercise.json  ExerciseList.json  ExerciseParameter.json  ExerciseParameterList.json  User.json  UserList.json
tests/test_day/: test_dingen.py
tests/test_exercise/: test_api.py  test_crud.py  util.py
tests/test_parameter/: test_api.py  test_crud.py  util.py
tests/test_session/: test_api.py  test_crud.py  test_service.py  utils.py
tests/test_user/: test_api.py  test_crud.py  util.py
tests/test_workout/: test_crud.py
